--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- versions -->
+        <version.junit>4.12</version.junit>
     </properties>
 
     <dependencies>
@@ -21,12 +24,40 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
 
-        <!-- AST parsing -->
+        <!-- AST parsing : tbar -->
         <dependency>
             <groupId>edu.uni.lu.serval</groupId>
             <artifactId>TBar</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- AST parsing : eclipse JDT -->
+        <dependency>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>runtime</artifactId>
+            <version>3.10.0-v20140318-2214</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.birt.runtime</groupId>
+            <artifactId>org.eclipse.core.resources</artifactId>
+            <version>3.10.0.v20150423-0755</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.tycho</groupId>
+            <artifactId>org.eclipse.jdt.core</artifactId>
+            <version>3.12.0.v20160516-2131</version>
+        </dependency>
+
+        <!-- json output -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- Logger -->
@@ -45,10 +76,18 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.10</version>
         </dependency>
+
+        <!-- test -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${version.junit}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
         </dependency>
 
 
@@ -96,7 +135,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        edu.lu.uni.serval.ibir.main.Main
+                                        additivepatterns.AddConditionToPredictionRunner
                                     </mainClass>
                                 </manifest>
                             </archive>
